scaffolding home page, product listing page, router

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-//@tailwind base;
-//@tailwind components;
-//@tailwind utilities;
-
 @import "tailwindcss";
+
 @plugin "daisyui" {
 	themes: light --default, dark, cupcake, bumblebee, emerald, corporate, synthwave, retro, cyberpunk, valentine, halloween, garden, forest, aqua, business, luxury, dracula, fantasy, wireframe, black, acid, cmyk, autumn, winter, acid, acid-dark;
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .g-th-header {
+    @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
+  }
 }
