--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,14 @@
   .g-th-header {
     @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
   }
+
+  .g-badge-active {
+	@apply inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-green-100 text-green-800;
+  }
+  .g-badge-pending {
+	@apply inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-yellow-100 text-yellow-800;
+  }
+  .g-badge-alert {
+	@apply inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-red-100 text-red-800;
+  }
 }
