new button at product listing page; scaffold product detail page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,7 @@
             >
               <i data-lucide="layout-dashboard" class="w-5 h-5 text-white"></i>
             </div>
-            <span class="text-white font-semibold text-lg">OneHub Admin</span>
+            <span class="text-white font-semibold text-lg">Angular Admin</span>
           </div>
           <button
             id="closeSidebar"
