--- a/src/app/product-listing-page/product-listing-page.html
+++ b/src/app/product-listing-page/product-listing-page.html
@@ -1,8 +1,15 @@
 <div class="p-6 h-screen flex flex-col">
   <!-- Page Header -->
-  <div class="mb-6 flex-shrink-0">
-    <h1 class="text-2xl font-bold text-gray-900">Products</h1>
-    <p class="text-gray-600 mt-1">Manage your insurance product portfolio</p>
+  <div class="mb-6 flex-shrink-0 flex items-center justify-between">
+    <div>
+      <h1 class="text-2xl font-bold text-gray-900">Products</h1>
+      <p class="text-gray-600 mt-1">Manage your insurance product portfolio</p>
+    </div>
+    <div>
+        <a class="g-btn-primary text-sm" routerLink="/products/new">
+          + New Product
+        </a>
+    </div>
   </div>
 
   <!-- Table Container -->
@@ -96,12 +103,15 @@
                 <dialog id="delete_modal" class="modal">
                   <div class="modal-box">
                     <h3 class="text-lg font-bold">Hello!</h3>
-                    <p class="py-4">
-                      Do you want to delete this product?
-                    </p>
+                    <p class="py-4">Do you want to delete this product?</p>
                     <div class="modal-action">
                       <form method="dialog">
-                        <button class="btn btn-error text-white mr-3" (click)="deleteProduct(product.id)">Delete</button>
+                        <button
+                          class="btn btn-error text-white mr-3"
+                          (click)="deleteProduct(product.id)"
+                        >
+                          Delete
+                        </button>
                         <button class="btn">Close</button>
                       </form>
                     </div>
