add custom toast component

--- a/src/app/product-detail-page/product-detail-page.html
+++ b/src/app/product-detail-page/product-detail-page.html
@@ -94,5 +94,10 @@
     <div class="flex justify-end space-x-4">
       <button type="submit" class="g-btn-primary">Save Product</button>
     </div>
+    <toast
+      title="Successfully saved!"
+      message="Product have been saved successfully."
+      [duration]="0"
+    ></toast>
   </form>
 </div>
