--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,4 +25,8 @@
   .g-btn-primary {
     @apply bg-blue-500 text-white hover:bg-blue-600 px-4 py-2 rounded-lg shadow transition cursor-pointer;
   }
+
+  a {
+    @apply text-blue-500 hover:underline;
+  }
 }
