--- a/src/app/product-listing-page/product-listing-page.html
+++ b/src/app/product-listing-page/product-listing-page.html
@@ -6,9 +6,9 @@
       <p class="text-gray-600 mt-1">Manage your insurance product portfolio</p>
     </div>
     <div>
-        <a class="g-btn-primary text-sm" routerLink="/products/new">
-          + New Product
-        </a>
+      <a class="g-btn-primary text-sm" routerLink="/products/new">
+        + New Product
+      </a>
     </div>
   </div>
 
@@ -45,9 +45,12 @@
                 }}</span>
               </div>
               <div class="ml-4">
-                <div class="text-sm font-medium text-gray-900">
+                <a
+                  class="text-sm font-medium"
+                  routerLink="/products/{{ product.id }}"
+                >
                   {{ product.name }}
-                </div>
+                </a>
                 <div class="text-sm text-gray-500">ID: {{ product.id }}</div>
               </div>
             </div>
