--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,12 +29,7 @@
           class="flex-1 px-4 py-6 space-y-2 overflow-y-auto custom-scrollbar"
         >
           <div class="space-y-1">
-            <a
-              routerLink="/home"
-              class="nav-item"
-              routerLinkActive="active"
-              data-content="dashboard"
-            >
+            <a routerLink="/home" class="nav-item" routerLinkActive="active">
               <lucide-angular
                 [img]="icons.icHome"
                 class="my-icon"
@@ -99,7 +94,10 @@
             <div
               class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center"
             >
-              <i data-lucide="user" class="w-4 h-4 text-white"></i>
+              <lucide-angular
+                [img]="icons.icUser"
+                class="text-white"
+              ></lucide-angular>
             </div>
             <div class="flex-1 min-w-0">
               <p class="text-sm font-medium text-white truncate">John Doe</p>
@@ -114,7 +112,7 @@
     <div class="flex-1 flex flex-col overflow-hidden lg:pl-0">
       <!-- Header -->
       <header
-        class="bg-white shadow-sm border-b border-gray-200 h-16 flex items-center justify-between px-4 lg:px-6"
+        class="bg-white shadow-sm border-b border-gray-200 h-16 flex items-center justify-between px-4 lg:px-6 p-5"
       >
         <div class="flex items-center space-x-4">
           <!-- Mobile menu button -->
@@ -151,7 +149,7 @@
               class="w-64 pl-12 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
             />
             <lucide-angular
-              [img]="icons.icSearch"
+              [img]="icons.icUser"
               class="absolute left-3 top-1.5 w-4 h-4 text-gray-400"
             ></lucide-angular>
           </div>
@@ -174,7 +172,10 @@
               <div
                 class="w-8 h-8 bg-gray-300 rounded-full flex items-center justify-center"
               >
-                <i data-lucide="user" class="w-4 h-4 text-gray-600"></i>
+                <lucide-angular
+                  [img]="icons.icUser"
+                  class="text-gray-600"
+                ></lucide-angular>
               </div>
               <span class="hidden md:block font-medium">John Doe</span>
               <i data-lucide="chevron-down" class="w-4 h-4"></i>
